[metadata]
name = sqlite_bedrock_packs
author = Nusiq
version = attr: sqlite_bedrock_packs.VERSION
description = Python package that loads data from Minecraft: Bedrock Edition packs into SQLite database
long_description = file: README.rst, LICENSE
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/Nusiq/sqlite_bedrock_packs/tree/master
    Documentation = https://sqlite-bedrock-packs.readthedocs.io/en/latest/

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
where = src


[options.package_data]
better_json_tools = py.typed
